fix: center text align hovered portfolio image description

--- a/src/containers/Portfolio/ImagesGrid/ImagesGrid.module.scss
+++ b/src/containers/Portfolio/ImagesGrid/ImagesGrid.module.scss
@@ -1,3 +1,4 @@
 .imagesGridList {
   display: grid;
+  padding-bottom: 3rem;
 }
